--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,16 @@
 <h1>Display your Pirate here</h1>
 
+<h3>Name: <%= @pirate.name %></h3><br>
+<h4>Weight: <%= @pirate.weight %></h4><br>
+<h4>Height: <%= @pirate.height %></h4><br>
 
 <h2>Display your first ship here</h2>
+
+<% @ships.each do |ship| %>
+    <p>Name: <%= ship.name %></p><br>
+    <p>Type: <%= ship.type %></p><br>
+    <p>Booty: <%= ship.booty %></p><br>
+<% end %>
 
 
 <h2>Display your second ship here</h2>
